[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Environments/LandingScreen.gd" type="Script" id=1]

[node name="LandingScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="ProgramTitleLabe" type="Label" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -124.0
margin_top = 233.0
margin_right = 124.0
margin_bottom = 247.0
text = "CustomNPCS Node Based Dialog Editor"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -66.0
margin_top = -20.0
margin_right = 66.0
margin_bottom = 20.0

[node name="Open Environment" type="Button" parent="Panel/VBoxContainer"]
margin_right = 132.0
margin_bottom = 20.0
text = "Open Environment"

[node name="FileDialog" type="FileDialog" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -389.5
margin_top = -308.5
margin_right = 389.5
margin_bottom = 308.5
window_title = "Open a Directory"
dialog_text = "test"
mode = 2
access = 2

[node name="InvalidFolderWarning" type="PopupDialog" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -326.0
margin_top = -158.5
margin_right = 326.0
margin_bottom = 158.5

[node name="Label" type="Label" parent="Panel/InvalidFolderWarning"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "The selected folder is not a valid CustomNPCS environment.

You may continue, but you will not be able to access named quests, factions, or existing dialogs,
and exported dialogs will not properly index their IDs, with will cause conflicts if you manually move 
them into a world.

Do you wish to proceed?"
align = 1
valign = 1
autowrap = true

[node name="Confirm" type="Button" parent="Panel/InvalidFolderWarning"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 137.0
margin_top = -42.0
margin_right = 199.0
margin_bottom = -22.0
text = "Confirm"

[node name="Cancel" type="Button" parent="Panel/InvalidFolderWarning"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -177.0
margin_top = -45.0
margin_right = -123.0
margin_bottom = -25.0
text = "Cancel"

[connection signal="pressed" from="Panel/VBoxContainer/Open Environment" to="." method="_on_Open_Environment_pressed"]
[connection signal="confirmed" from="Panel/FileDialog" to="." method="_on_FileDialog_confirmed"]
[connection signal="dir_selected" from="Panel/FileDialog" to="." method="_on_FileDialog_dir_selected"]
[connection signal="pressed" from="Panel/InvalidFolderWarning/Confirm" to="." method="_on_Confirm_pressed"]
[connection signal="button_up" from="Panel/InvalidFolderWarning/Cancel" to="." method="_on_Cancel_button_up"]
